Prettier look with new font and battery indicator arc

--- a/appinfo.json
+++ b/appinfo.json
@@ -11,8 +11,8 @@
         "media": [
             {
                 "type": "raw",
-                "name": "MONACO_9",
-                "file": "Monaco9.bin"
+                "name": "UNIVERS",
+                "file": "UniversUltraThinCondensed18x80.bin"
             }
         ]
     },
